--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -1,13 +1,15 @@
 <nav class="navbar sticky-top anavbar-expand-xxl navbar-dark bg-dark justify-content-center py-0 px-1">
     <div class="content d-flex justify-content-between flex-wrap">
 
+
+
+        <!-- LEFT SIDE -->
         <div class="d-flex align-items-center">
             <div class="nsavbar-brand me-1" [routerLink]="'home-tab'">
                 <img src="assets/imgs/app-icon.png" height="30" alt="">
             </div>
             <div class="me-1" [routerLink]="'home-tab'">
-                <button type="button" name="" id="" class="btn btn-danger" (click)="clearAllData()"
-                    data-bs-toggle="modal" data-bs-target="#mymodal">
+                <button type="button" name="" id="" class="btn btn-danger" (click)="showClearAllModal()">
                     CLEAR ALL
                 </button>
             </div>
@@ -21,7 +23,7 @@
 
 
 
-
+        <!-- RIGHT SIDE -->
         <div class="d-flex align-items-center">
             <div class="ms-1" (click)="showQuickSheetModal()">
                 <img src="https://cdn.vectorstock.com/i/1000x1000/60/58/lamp-light-bulb-idea-icon-vector-20716058.webp"
@@ -30,17 +32,15 @@
             <div class="ms-1" [routerLink]="'sarneg-tab'">
                 <img src="assets/imgs/sarneg-image.png" height="30" alt="">
             </div>
-            <div class="ms-1" [routerLink]="'vigenere-tab'">
-                <img src="assets/imgs/vigenere-image.png" height="30" alt="">
-            </div>
             <div class="ms-1" [routerLink]="'reports-page'">
                 <img src="assets/imgs/reports-image.png" height="30" alt="">
             </div>
 
-            
+
             <!-- HAMBURGER MENU ICON -->
             <button class="ms-2 navbar-toggler" type="button" data-bs-toggle="collsapse" data-bs-target="#navbasrNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" (click)="isMenuHidden=!isMenuHidden">
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
+                (click)="isMenuHidden=!isMenuHidden">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>
@@ -57,12 +57,15 @@
         <div class="collsspse navbar-collapse" [ngClass]="{'hidden':isMenuHidden}" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" [routerLink]="'sarneg-tab'" (click)="isMenuHidden=!isMenuHidden">kodowanie SARNEG </a>
+                    <a class="nav-link" [routerLink]="'sarneg-tab'" (click)="isMenuHidden=!isMenuHidden">kodowanie
+                        SARNEG </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="'vigenere-tab'" (click)="isMenuHidden=!isMenuHidden">kodowanie Vigenere</a>
+                    <a class="nav-link" [routerLink]="'vigenere-tab'" (click)="isMenuHidden=!isMenuHidden">kodowanie
+                        Vigenere</a>
                 </li>
-                <li *ngFor="let item of getFavouriteReports()" class="nav-item" (click)="setCurrentReport(item)" (click)="isMenuHidden=!isMenuHidden">
+                <li *ngFor="let item of getFavouriteReports()" class="nav-item" (click)="setCurrentReport(item)"
+                    (click)="isMenuHidden=!isMenuHidden">
                     <a class="nav-link" [routerLink]="'report-tab'">{{item.name}}
                         <i class="fas fa-thumbtack"></i>
                     </a>
@@ -81,12 +84,16 @@
                         </button>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a *ngFor="let item of reports" class="dropdown-item d-flex justify-content-end"
-                                [routerLink]="'report-tab'" (click)="setCurrentReport(item)" (click)="isMenuHidden=!isMenuHidden">{{item.name}}</a>
+                                [routerLink]="'report-tab'" (click)="setCurrentReport(item)"
+                                (click)="isMenuHidden=!isMenuHidden">{{item.name}}</a>
                         </div>
                     </div>
                 </li>
 
 
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="'settings-page'">Ustawienia </a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="'vigenere-tab'">Help </a>
                 </li>
@@ -99,43 +106,27 @@
 
 
 
-<div id="mymodal" class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 
 
 
 
 
-
-
-
-
-
-
+<!-- MODALS -->
 <ng-template #infoModal let-modal>
-	<div class="modal-header">
-		<h4 class="modal-title">Quick Data:</h4>
-		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
-	</div>
-	<div class="modal-body">
+    <div class="modal-header">
+        <h4 class="modal-title">Quick Data:</h4>
+        <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
         <app-quick-data></app-quick-data>
-	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-secondary" (click)="modal.close('Close click')">Close</button>
-	</div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="modal.close('Close click')">Close</button>
+    </div>
 </ng-template>
+
+<!-- <app-modal-generic [title]="'aa'" [content]="'content'"        (modalResult)="closeClearAllModal($event)"></app-modal-generic> -->
+<!-- <ng-template #clearAllModal let-modal>
+        <app-modal-generic></app-modal-generic>
+</ng-template> -->
