--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
@@ -1,72 +1,136 @@
+<div><b>IN PROGRESS</b></div>
 
-<div ><b>IN PROGRESS</b></div>
+<div *ngFor="let line of correspondenceBook" class="d-flex flex-row mb-2">
+
+    <div *ngIf="line.transmitDirection===transmitDirections.INCOMING" class="col-1"></div>
+
+
+    <div class="card w-100">
+        <div class="card-body p-0">
+            <h6 class="card-title p-1 m-0 text-muted header d-flex flex-row justify-content-between">
+                <small class="">{{getTimeDTG(line.timestamp_DEPR)}}</small>
+                <small class="">
+                    <span class="mx-1">{{line.senderCodename}}</span>
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    <span class="mx-1">{{line.recipientCodename}}</span>
+                </small>
+            </h6>
+            <div class="card-text p-1 " style="white-space: pre-line" [ngClass]="{
+                'outgoing': line.transmitDirection===transmitDirections.OUTGOING,
+                'incoming': line.transmitDirection===transmitDirections.INCOMING,
+                'bypassing': line.transmitDirection===transmitDirections.BYPASSING,
+            
+            }">
+                {{line.content}}
+            </div>
+        </div>
+    </div>
+
+    <div *ngIf="
+        line.transmitDirection===transmitDirections.OUTGOING
+     || line.transmitDirection===transmitDirections.BYPASSING 
+    " class="col-1"></div>
+
+</div>
+
+
+
+
+
+<div class="d-flex flex-row mb-2">
+    <div class="card w-100">
+        <div class="card-body p-0">
+            <h6 class="card-title p-1 m-0 text-muted header d-flex flex-column justify-content-between">
+
+                <div class="input-group input-group-sm mb-1">
+                    <!-- <div class="input-group-text"> -->
+                    <input [(ngModel)]="newEntryDTG" type="text" class="form-control" placeholder="Recipient's username"
+                        aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <button class="btn btn-primary m-0 w-2em" type="button">
+                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                    </button>
+
+                    <button class="btn btn-sm btn-outline-secondary dropdown-toggle m-0" type="button"
+                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{newEntry.senderCodename}}
+                    </button>
+                    <div class="dropdown-menu">
+                        <small *ngFor="let team of teams" class="dropdown-item"
+                            (click)="setNewEntrySender(team)">{{team.codename}}</small>
+                    </div>
+
+                    <span class="input-group-text" id="basic-addon1">
+                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    </span>
+
+                    <button class="btn btn-sm btn-outline-secondary dropdown-toggle m-0" type="button"
+                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{newEntry.recipientCodename}}
+                    </button>
+                    <div class="dropdown-menu">
+                        <small *ngFor="let team of teams" class="dropdown-item"
+                            (click)="setNewEntryRecipient(team)">{{team.codename}}</small>
+                    </div>
+
+                </div>
+            </h6>
+
+
+
+
+
+
+            <div class="d-flex">
+                <textarea [(ngModel)]="newEntry.content" class="form-control m-1" rows="4" cols="1000"
+                    aria-label="Default" aria-describedby="inputGroup-sizing-default"></textarea>
+            </div>
+
+
+
+
+
+
+
+
+
+            <div class="card-footer">
+                <button type="button" class="btn btn-primary m-0" (click)="addNewEntry()">dodaj Wpis
+                    <i class="fas fa-plus-circle    "></i>
+                </button>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
 
 <div>
-    <div *ngFor="let line of correspondenceBook" class="input-group input-group-sm mb-3">
-
-        <div class="input-group-text text-wrap d-flex flex-column line-header">
-            <div>
-                <span class="badge bg-small bg-secondary">{{getTime(line.timestamp)}}</span>
-            </div>
-            <div>
-                <span *ngIf="line.transmitDirection===transmitDirections.OUTGOING"
-                    class="badge bg-small bg-primary">{{'Nadawanie DO >>>>' | uppercase}}</span>
-                <span *ngIf="line.transmitDirection===transmitDirections.INCOMING"
-                    class="badge bg-small bg-success">{{'>>> Odbiór OD'
-                    | uppercase}}</span>
-            </div>
-            <div>
-                <span class="badge bg-small bg-secondary">{{line.codename}}</span>
-            </div>
-        </div>
-
-        <div class="form-control text-wrap content">
-            {{line.content}}
-        </div>
-
-    </div>
-</div>
+    <app-help-tile [content]="'
+mozan mergowac kilka ksiazek i export do czytelnej posatci
 
 
 
-
-<div class="input-group mb-3">
-    <button class="input-group-text btn btn-outline-secondary p-0 m-0" type="button">Button1</button>
-    <button class="input-group-text btn btn-outline-secondary p-0 m-0" type="button">Button2</button>
-    <input type="text" class="input-group-text form-control" placeholder=""
-        aria-label="Example text with two button addons">
-</div>
-
-
-<div class="input-group mb-3">
-    <button class="input-group-text btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-        aria-expanded="false">Dropdown</button>
-    <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-        <li>
-            <hr class="dropdown-divider">
-        </li>
-        <li><a class="dropdown-item" href="#">Separated link</a></li>
-    </ul>
-    <input type="text" class="input-group-form form-control m-0" aria-label="Text input with dropdown button">
-</div>
+'">
+    </app-help-tile>
 
 
 
-
-<div class="input-group">
-    <button class="m-0 btn btn-outline-secondary dropdown-toggle name" type="button" data-bs-toggle="dropdown"
-        aria-expanded="false">'dec?.name'</button>
-    <div class="dropdown-menu dropdown-menu-end">
-        <div><span class="dropdown-item">adasdasd</span></div>
-    </div>
-
-    <span class="input-group-text p-1" id="basic-addon1">jesli TAK to:</span>
-
-    <button class="input-group-text btn btn-outline-primary m-0 next-block" type="button">pokaz
-        <i class="fa fa-location-arrow" aria-hidden="true"></i>
-    </button>
-
-</div>
+    edit delete
+    bypassing color? width?
+    validations kiedy nie wybrano odiorcy
+    sender recipien jako obikety a nie nicknamy
+    export import merge
+    get rid of timestamp use DTG instead
