--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.scss
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.scss
@@ -1,3 +1,29 @@
 .line-header{
     width: 8em;
 }
+
+.incoming{
+    background-color: lightblue;
+    border-radius: 0px 0px 5px 5px;
+}
+
+.outgoing{
+    background-color: lightyellow;
+    border-radius: 0px 0px 5px 5px;
+}
+
+.bypassing{
+    background-color: lightgreen;
+    border-radius: 0px 0px 5px 5px;
+}
+
+.header{
+    border-bottom: 1px solid black;
+    border-radius: 5px 5px 0px 0px ;
+    // border-radius: 3;
+}
+
+.card-subtitle{
+    // background-color: lightgray;
+
+}
