--- a/radio-operator-toolbox-angular/src/styles.scss
+++ b/radio-operator-toolbox-angular/src/styles.scss
@@ -80,6 +80,36 @@ select {
     color: green;
 }
 
+.w-90{
+    width: 90%;
+}
+
+.w-80{
+    width: 80%;
+}
+
+.w-10{
+    width: 10%;
+}
+
+.w-20{
+    width: 20%;
+}
+
+
+.w-2em{
+    width: 2em;
+}
+
+.w-3em{
+    width: 3em;
+}
+
+.w-4em{
+    width: 4em;
+}
+
+
 @font-face {
     font-family: 'JetBrainsMono-Medium';
     src: url('./assets/fonts/JetBrainsMono-Medium.ttf');
