--- a/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,5 @@
+<app-help-tile [contentLines]="helpLines"></app-help-tile>
+
 <div class="d-flex">
     <div class="tile">
         <app-menu-tile [name]="'Kodowanie'" [routerLink]="[ '/encodings-page']" [isLabelShowed]="true"></app-menu-tile>
