--- a/radio-operator-toolbox-angular/src/app/pages/cheatsheet-page/cheatsheet-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/cheatsheet-page/cheatsheet-page.component.html
@@ -1,3 +1,5 @@
+<app-help-tile [content]="helpLines"></app-help-tile>
+
 <div>dlugosc fali: lambda=c/f</div>
 <div class="mb-2">
     <div *ngFor="let wave of wavesFreqsLengthsPairs, index as idx" class="input-group mb-1">
