--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
@@ -1,4 +1,4 @@
-<div><b>IN PROGRESS</b></div>
+<div><b>🟢🛠️🚧 IN PROGRESS 🚧🛠️🟢</b></div>
 
 <div *ngFor="let line of correspondenceBook" class="d-flex flex-row mb-2">
 
@@ -110,27 +110,6 @@
 
 
 
-
-
-
-
-
-
-
 <div>
-    <app-help-tile [content]="'
-mozan mergowac kilka ksiazek i export do czytelnej posatci
-
-
-
-'">
-    </app-help-tile>
-
-
-
-    edit delete
-    bypassing color? width?
-    validations kiedy nie wybrano odiorcy
-    sender recipien jako obikety a nie nicknamy
-    export import merge
-    get rid of timestamp use DTG instead
+    <app-help-tile [content]="helpLines"> </app-help-tile>
+</div>
