--- a/radio-operator-toolbox-angular/src/app/pages/encodings-page/encodings-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/encodings-page/encodings-page.component.html
@@ -8,6 +8,8 @@
     <div class="tile">
         <app-menu-tile [name]="'vigenere'" [routerLink]="[ '/vigenere-tab']"></app-menu-tile>
     </div>
+</div>
+<div class="d-flex">
     <div class="tile">
         <app-menu-tile [name]="'Szachownica Polibiusza'" [routerLink]="[ '/polybius-tab']"
             [isLabelShowed]="true"></app-menu-tile>
