--- a/radio-operator-toolbox-angular/src/app/pages/encodings-page/vic-tab/vic-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/encodings-page/vic-tab/vic-tab.component.html
@@ -1,3 +1,2 @@
-<p>vic-tab works!</p>
-
+<p>o ten bedzie fajny</p>
 <a href="https://pl.wikipedia.org/wiki/"> https://pl.wikipedia.org/wiki/Szyfr_VIC</a>
