--- a/radio-operator-toolbox-angular/src/app/pages/encodings-page/vigenere-tab/vigenere-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/encodings-page/vigenere-tab/vigenere-tab.component.html
@@ -1,4 +1,4 @@
-<div style="font-size: 4em">dont use it <br> it is in progress/refactor</div>
+<div style="font-size: 2em; background-color: darkred; color: lawngreen;">dont use it <br> it is in progress/refactor</div>
 
 <a href="https://pl.wikipedia.org/wiki/Szyfr_Vigen%C3%A8re%E2%80%99a">https://pl.wikipedia.org/wiki/Szyfr_Vigenere'a</a>
 
