--- a/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<app-help-tile [contentLines]="helpLines"></app-help-tile>
+<app-help-tile [content]="helpLines"></app-help-tile>
 
 <div class="d-flex">
     <div class="tile">
