--- a/radio-operator-toolbox-angular/src/app/pages/tdr-data-page/tdr-data-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/tdr-data-page/tdr-data-page.component.html
@@ -1,5 +1,5 @@
 
-
+<app-help-tile [content]="helpLines"></app-help-tile>
 <div class="input-group mt-2 mb-4 w-100">
     <span class="input-group-text px-1 w-25">my Team:</span>
     <button class="btn btn-secondary-outline dropdown-toggle m-0 w-75" type="button" id="dropdownMenuButton2"
@@ -36,34 +36,10 @@
 </div>
 
 
-<br>
-<hr>
-<p>sciezki do opcji w RRC: GPS,KODEK,ALERT,AUTH itp</p>
-<p> alerty</p>
-<p> SARNEG PARZYSTE</p>
-<p> SARNEG NIEPARZYSTE</p>
-<p> import TDR from json/txt</p>
-<p> export TDR to json/txt</p>
-
-<br>
-<hr>
 
 
 
-<i class="fas fa-star    "></i>
-<i class="fas fa-star    "></i>
-<i class="fas fa-star-and-crescent    "></i>
-<i class="fas fa-star-and-crescent    "></i>
-<i class="fas fa-star-half    "></i>
-<i class="fa-regular fa-star"></i>
-<i class="fa-solid fa-star"></i>
-<i class="fa fa-star-o" aria-hidden="true"></i>
-<i class="fa fa-star" aria-hidden="true"></i>
-<i class="fas fa-star-o" aria-hidden="true"></i>
-<i class="fab fa-star-o" aria-hidden="true"></i>
-
-
-<div class="input-group input-group-sm mb-3">
+<!-- <div class="input-group input-group-sm mb-3">
     <div class="input-group-prepend">
         <span class="input-group-text" id="inputGroup-sizing-sm">Small</span>
     </div>
@@ -88,4 +64,4 @@
     <button class="input-group-text btn btn-outline-secondary p-0 m-0" type="button">Button2</button>
     <input type="text" class="input-group-text form-control" placeholder=""
         aria-label="Example text with two button addons">
-</div>
+</div> -->
