--- a/radio-operator-toolbox-angular/src/app/pages/encodings-page/polybius-square-tab/polybius-square-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/encodings-page/polybius-square-tab/polybius-square-tab.component.html
@@ -1,2 +1,2 @@
-<p>polybius-square-tab works!</p>
+<p>polybius-square-tab</p>
 <a href="https://en.wikipedia.org/wiki/Polybius_square">https://en.wikipedia.org/wiki/Polybius_square</a>
