--- a/radio-operator-toolbox-angular/src/app/pages/encodings-page/sarneg-tab/sarneg-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/encodings-page/sarneg-tab/sarneg-tab.component.html
@@ -1,3 +1,5 @@
+<app-help-tile [content]="helpLines"></app-help-tile>
+
 <div>
     <div class="p-2">
         <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Numery do zakodowania (tylko
