--- a/radio-operator-toolbox-angular/src/app/pages/cheatsheet-page/cheatsheet-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/cheatsheet-page/cheatsheet-page.component.html
@@ -1,6 +1,7 @@
 <app-help-tile [content]="helpLines"></app-help-tile>
 
-<div>dlugosc fali: lambda=c/f</div>
+<div>dlugosc fali: λ=c/f</div>
+<div>polowa fali=dlugosc ramiena anteny (dipola)</div>
 <div class="mb-2">
     <div *ngFor="let wave of wavesFreqsLengthsPairs, index as idx" class="input-group mb-1">
         <span class="input-group-text px-1  text-center">f{{idx+1}} [MHz]</span>
@@ -19,9 +20,9 @@
 
 
 <p></p>
-<p>paramtery RRC</p>
+<p>alfabet NATO</p>
+<p>parametry RRC</p>
 <p></p>
-<p>wzory:</p>
-<p>horyzont radiowy</p>
+<div>wzory:</div>
+<p>horyzont radiowy wzor, kalkulator</p>
 <p></p>
-<p>alfapbet NATO</p>
