--- a/radio-operator-toolbox-angular/src/app/core-components/help-tile/help-tile.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/help-tile/help-tile.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isHidden && showAllHelpTooltips" class="card m-2">
+<div *ngIf="!isHidden && showAllHelpTooltips" class="card mb-2">
     <div class="card-body">
         <h5 class="card-title d-flex flex-row justify-content-between">
             <div><i class="fas fa-info-circle    "></i> Help:</div>
