--- a/radio-operator-toolbox-angular/src/app/app.component.html
+++ b/radio-operator-toolbox-angular/src/app/app.component.html
@@ -4,7 +4,7 @@
 <!-- <div class="d-flex flex-shrink-0"> -->
 <app-nav-bar></app-nav-bar>
 <div class="d-flex justify-content-center">
-    <div class="content">
+    <div class="content p-2" style="border: 2px solid black;">
 
         <router-outlet></router-outlet>
         <app-footer></app-footer>
