--- a/radio-operator-toolbox-angular/src/app/pages/encodings-page/encodings-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/encodings-page/encodings-page.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex">
+<div class="d-flex justify-content-between">
     <div class="tile">
         <app-menu-tile [name]="'sarneg'" [routerLink]="[ '/sarneg-tab']"></app-menu-tile>
     </div>
@@ -9,7 +9,9 @@
         <app-menu-tile [name]="'vigenere'" [routerLink]="[ '/vigenere-tab']"></app-menu-tile>
     </div>
 </div>
-<div class="d-flex">
+
+
+<div class="d-flex justify-content-between">
     <div class="tile">
         <app-menu-tile [name]="'Szachownica Polibiusza'" [routerLink]="[ '/polybius-tab']"
             [isLabelShowed]="true"></app-menu-tile>
