--- a/radio-operator-toolbox-angular/src/app/pages/home-page/menu-tile/menu-tile.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/home-page/menu-tile/menu-tile.component.html
@@ -1,4 +1,4 @@
-<div class="m-2 d-flex align-items-center justify-content-center">
+<div class="d-flex align-items-center justify-content-center mb-2">
     <button title="sarneg" type="button" class="btn btn-outline-primary">
         <img *ngIf="!isLabelShowed" src="assets/imgs/{{iconName}}" alt="">
         <span *ngIf="isLabelShowed" class="tile-name">{{name}}</span>
